# libdvm

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Catnip.cmake  PKGBUILD  README.md
include/: dvm.h  ext2.h  fat.h  filesystem.h
source/: dvm_cache.c  dvm_calico.c  dvm_debug.h  dvm_disc.c  dvm_libgba.c  dvm_libnds.c  dvm_libogc.c  dvm_libogc2.c  dvm_prober.c  dvm_volume.c  ext2_wrappers.c  ext4_driver.c  ext4_driver.h  fat_driver.c  fat_driver.h  fat_wrappers.c  nitrofs.c
